force-clientforce/main/default/objects/TECH_IntegrationManager__c/TECH_IntegrationManager__c.object-meta.xml
<CustomObject>
    <label>TECH Integration Managers</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Integration Managers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TECH Integration Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>