force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalId>true</externalId>
    <label>AccountId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>