force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <label>ApexMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>