force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Error_Status__c.field-meta.xml
<CustomField>
    <fullName>Error_Status__c</fullName>
    <description>Error Status</description>
    <label>Error Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>