force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/EventUuid__c.field-meta.xml
<CustomField>
    <fullName>EventUuid__c</fullName>
    <externalId>true</externalId>
    <label>EventUuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>