force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Gouverneurs_limites_Event__c.field-meta.xml
<CustomField>
    <fullName>Gouverneurs_limites_Event__c</fullName>
    <label>Gouverneurs limites Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>