force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Gouvernor_Limits__c.field-meta.xml
<CustomField>
    <fullName>Gouvernor_Limits__c</fullName>
    <label>Gouverneurs limites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>