force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/is_C360_Synchronous__c.field-meta.xml
<CustomField>
    <fullName>is_C360_Synchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is C360 Synchronous</label>
    <type>Checkbox</type>
</CustomField>