force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/is_Flow_testing__c.field-meta.xml
<CustomField>
    <fullName>is_Flow_testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Flow testing</label>
    <type>Checkbox</type>
</CustomField>