force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/MS_Responce__c.field-meta.xml
<CustomField>
    <fullName>MS_Responce__c</fullName>
    <label>MS_Responce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>