force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>