force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>