force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>