force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <label>Other_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>