force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <externalId>true</externalId>
    <label>ReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>