force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>