force-clientforce/main/default/objects/TECH_IntegrationManager__c/fields/TypeFlow__c.field-meta.xml
<CustomField>
    <fullName>TypeFlow__c</fullName>
    <label>TypeFlow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>